Divided ProductList, Product and Price endpoints. Refactored
